# local-estimates-lighting

./: README.md
cpp_code/denoising/: README.md  main.cpp
cpp_code/sobolev_task/: CMakeLists.txt  README.md  main.cpp
matlab_code/: README.md  illumination_comparison.m
pyton_code/: main.py
pyton_code/denoising/: README.md  requirements.txt
pyton_code/double_local_estimate/: README.md  main.py
pyton_code/sobolev_task/: README.md  main.py  requirements.txt
